--- a/README.html
+++ b/README.html
@@ -1,5 +1,4 @@
-## Hello World! 👋
-"<article class="Introduction">
+ <article class="Introduction">
   <h1> 
     Albin Tenghagen is my name  
   </h1>
@@ -11,4 +10,4 @@
   <a href="https://chasacademy.se/job/grupp-26-the-fellowship-of-the-code">
   Winning contribution
   </a>
-</article>"
+</article>
