--- a/README.html
+++ b/README.html
@@ -7,7 +7,18 @@
   <p> Student mentor working at ChasAcademy malmö </p>
   
   <p> Winner of ChasChallenge 2025! </p>
-  <a href="https://chasacademy.se/job/grupp-26-the-fellowship-of-the-code">
+  <a href="https://chasacademy.se/job/grupp-26-the-fellowship-of-the-code" target="_blank">
   Winning contribution
   </a>
+</article>
+
+<article class="TechStack"> 
+    <h2> Database: </h2>
+       <p> SQL </p>
+    <h2> Backend: </h2>
+       <p> Express </p>
+    <h2> Frontend:</h2>
+       <p> React </p>
+    <h2> Runtime enviroment: </h2>
+       <p> Node.js </p>
 </article>
