--- a/README.html
+++ b/README.html
@@ -14,11 +14,11 @@
 
 <article class="TechStack"> 
     <h2> Database: </h2>
-       <p> SQL </p>
+       <p> SQL, MongoDB </p>
     <h2> Backend: </h2>
        <p> Express </p>
     <h2> Frontend:</h2>
-       <p> React </p>
+       <p> React, React Router, Remix </p>
     <h2> Runtime enviroment: </h2>
        <p> Node.js </p>
 </article>
